client/public/card.css
body {
  height: 100vh;
  width: 100vw;
  background-color: black;
  font-family: tomorrow;
  margin: 0px;
}
#main-screen {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: auto 450px 100px 100px;
}

.form {
  position: absolute;
  height: 90%;
  width: 90%;
  background-color: white;
  z-index: 10;
  opacity: 0.9;
  left: 5%;
  top: 5%;
}

.background {
  background-color: black;
  background-image: url(./images/background.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  height: 100vh;
  width: 100vw;
  position: absolute;
  z-index: -1;
  opacity: 0.9;
}

.start-game {
  grid-column-start: 5;
  grid-column-end: 9;
  color: white;
  text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
  font-size: 3em;
  margin-top: 5%;
  margin-bottom: 1%;
  text-align: center;
  cursor: pointer;
}

.start-game:hover {
  grid-column-start: 5;
  grid-column-end: 9;
  color: white;
  text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
  font-size: 3.5em;
  margin-top: 5%;
  margin-bottom: 1%;
  text-align: center;
  cursor: pointer;
  transition: 1s;
}

.next-round {
  grid-area: 4 / 5 / 4 / 9;
  color: white;
  text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
  margin: 2%;
  text-align: center;
  cursor: pointer;
  z-index: 3;
  font-size: 3rem;
}

.next-round:hover {
  grid-area: 4 / 5 / 4 / 9;
  color: white;
  text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
  margin: 2%;
  text-align: center;
  cursor: pointer;
  z-index: 3;
  font-size: 3.5rem;
  transition: 1s;
}

.end-game {
  grid-area: 5 / 5 / 5 / 9;
  color: white;
  text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
  margin: 2%;
  text-align: center;
  cursor: pointer;
  z-index: 3;
  font-size: 3rem;
}

.end-game:hover {
  grid-area: 5 / 5 / 5 / 9;
  color: white;
  text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
  margin: 2%;
  text-align: center;
  cursor: pointer;
  z-index: 3;
  font-size: 3.5rem;
  transition: 1s;
}

/* .game-grid-grid {
  grid-area: 2 / 3 / 2 / 10;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 50px auto;
} */

/* .player-box-1 {
  grid-area: 1 / 1 / 3 / 2;
  display: grid;
  grid-template-rows: 1fr 5fr;
  width: 400px;
  margin: auto;
}

.player-box-2 {
  grid-area: 1 / 3 / 3 / 4;
  display: grid;
  grid-template-rows: 1fr 5fr;
  width: 400px;
  margin: auto;
} */

/* .player-box-1 player-head {
  grid-area: 1/1/1/1;
  text-align: center;
  color: #0c5f95;
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
  letter-spacing: 2px;
  cursor: default;
  display: grid;
  grid-template-columns: 2fr 1fr 50px;
  margin-left: 20px;
} */

/* .splat-1 {
  background-image: url('splat-white-1.png');
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  text-align: center;
  text-shadow: -0.5px -0.5px 0 white, 0.5px -0.5px 0 white, -0.5px 0.5px 0 white, 0.5px 0.5px 0 white;
} */

/* .player-box-2 player-head {
  grid-area: 1/1/1/1;
  text-align: center;
  color: #af6214;
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
  letter-spacing: 2px;
  cursor: default;
  display: grid;
  grid-template-columns: 2fr 1fr;
} */

/* .splat-2 {
  background-image: url('splat-white-2.png');
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  text-align: center;
  text-shadow: -0.5px -0.5px 0 white, 0.5px -0.5px 0 white, -0.5px 0.5px 0 white, 0.5px 0.5px 0 white;
} */

/* .player-card-1 {
  grid-area: 2/1/2/1;
  margin-left: 15%;
  margin-right:15%;
  border: solid 2px black;
  border-radius: 25px;
  text-align: center;
  background-color: #0c5f95;
  display: grid;
  grid-template-rows: auto 150px repeat(6, 1fr);
} */

/* .character-name {
  margin: 2%;
  color: white;
  letter-spacing: 2px;
  font-size: 1.5rem;
  cursor: default;
} */

/* .character-image-1 {
  background-image: url(https://www.superherodb.com/pictures2/portraits/10/100/274.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  margin-left: 25px;
  margin-right: 25px;
  margin-bottom: 5px;
  border: solid 5px black;
} */

/* .attributes {
  text-align: left;
  margin-left: 10%;
  cursor: pointer;
} */

/* .player-card-2 {
  grid-area: 2/1/2/1;
  margin-left: 15%;
  margin-right:15%;
  border: solid 2px black;
  border-radius: 25px;
  text-align: center;
  background-color: #af6214;
  display: grid;
  grid-template-rows: auto 150px repeat(6, 1fr);
} */

/* .character-image-2 {
  background-image: url(https://www.superherodb.com/pictures2/portraits/10/100/1496.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  margin-left: 25px;
  margin-right: 25px;
  margin-bottom: 5px;
  border: solid 5px black;
} */

/* .vs {
  grid-area: 2 / 2 / 3 / 3;
  background-image: url("vs.png");
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
} */

